--- a/myfish/src/assets/app-settings.json
+++ b/myfish/src/assets/app-settings.json
@@ -1,5 +1,5 @@
 {
   "mapStyleUrl": "http://192.168.3.106:8125/styles/sbu01/style.json",
-  "apiBase": "/api"
+  "apiBase": "/api",
+  "mapStyles": "http://192.168.3.106:8125/styles.json"
 }
-
